--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,13 +1,15 @@
 
 user  nginx;
-worker_processes  1;
+worker_processes  auto;
 
 error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
 
 
 events {
-    worker_connections  1024;
+    use epoll;
+    worker_connections 51200;
+    multi_accept on;
 }
 
 
@@ -24,7 +26,7 @@ http {
     sendfile        on;
     #tcp_nopush     on;
 
-    keepalive_timeout  65;
+    keepalive_timeout  120;
 
     #gzip  on;
 
