--- a/N1.15.12_P7.2.20/nginx/nginx.vh.default.conf
+++ b/N1.15.12_P7.2.20/nginx/nginx.vh.default.conf
@@ -6,7 +6,7 @@ server {
     #access_log  /var/log/nginx/host.access.log  main;
 
     location / {
-        root   /usr/share/nginx/html;
+        root   /www;
         index  index.php index.html index.htm;
     }
 
@@ -16,7 +16,7 @@ server {
     #
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
-        root   /usr/share/nginx/html;
+        root   /www;
     }
 
     # proxy the PHP scripts to Apache listening on 127.0.0.1:80
@@ -28,7 +28,7 @@ server {
     # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
     #
     location ~ \.php$ {
-       root           /usr/share/nginx/html;
+       root           /www;
        fastcgi_pass   127.0.0.1:9000;
        fastcgi_index  index.php;
        fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
